--- a/.github/workflows/vitest.yaml
+++ b/.github/workflows/vitest.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Install npm dependencies
-        run: npm ci
+      - name: Install yarn dependencies
+        run: yarn install
       - name: run vitest
         run: npm run test
