--- a/.github/workflows/vitest.yaml
+++ b/.github/workflows/vitest.yaml
@@ -2,7 +2,7 @@ name: vitest-workflow
 
 on:
   pull_request: 
-    types: [opened, reopened, synchronize]
+    types: [opened, reopened, synchronize, ready_for_review]
     branches:
       - main
       - develop
@@ -10,16 +10,20 @@ on:
       - 'src/**'
 
 jobs:
-  vitest-job:
+  vitest:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: install node
+
+      - name: Install node.js v20
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install yarn dependencies
         run: yarn install
-      - name: run vitest
-        run: npm run test
+        
+      - name: Run tests with vitest
+        run: yarn run test -- --passWithNoTests
