--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,11 +42,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-
+      # 현재 경로 출력
+      - name: Print Current Workspace
+        run: pwd
+      
       # S3에 빌드 파일 배포
       - name: Deploy file to S3
         run: |
-          aws s3 sync --delete --region ${{ secrets.AWS_REGION }} /dist ${{ secrets.AWS_S3_BUCKET }}
+          aws s3 sync --delete --region ${{ secrets.AWS_REGION }} ./dist ${{ secrets.AWS_S3_BUCKET }}
 
       # CloudFront 캐시 무효화
       - name: Invalidate CloudFront cache
